src/main/java/ca/ucalgary/ensf609/sample/app/errors/MethodNotAllowedException.java
package ca.ucalgary.ensf609.sample.app.errors;

class MethodNotAllowedException extends ApplicationException {

    MethodNotAllowedException(int code, String message) {
        super(code, message);
    }
}
